--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,59 @@ body {
     --modal-background: #FCFCFC;
 }
 
-/* Сontainer */
+/* Reset */
+
+.link {
+    text-decoration: none;
+    font-style: normal;
+    margin: 0;
+}
+
+img {
+    display: block;
+}
+
+.list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6 p {
+    margin: 0;
+    padding: 0;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+button {
+	font-family: inherit;
+	color: currentColor;
+}
+
+input {
+	font-family: inherit;
+}
+
+/* Hidden preferenses */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+  /* Сontainer */
 
 .container {
     min-width: 320px;
@@ -38,7 +90,7 @@ body {
 
 @media screen and (min-width: 1158px) {
     .container {
-        min-width: 429px;
+        /* min-width: 429px; */
         max-width: 1158px;
         padding-left: 15px;
         padding-right: 15px;
@@ -162,58 +214,6 @@ body {
   }
 }
 
-/* Reset */
-
-.link {
-    text-decoration: none;
-    font-style: normal;
-    margin: 0;
-}
-
-img {
-    display: block;
-}
-
-.list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-h1,h2,h3,h4,h5,h6 p {
-    margin: 0;
-    padding: 0;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-button {
-	font-family: inherit;
-	color: currentColor;
-}
-
-input {
-	font-family: inherit;
-}
-
-/* Hidden preferenses */
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-
 /* Header */
 
 /* Logo */
@@ -276,7 +276,7 @@ input {
 
 @media screen and (min-width: 1158px) {
     .address-contacts {
-        display: flex;
+    display: flex;
     align-items: center;
     gap: 40px;
     }
@@ -286,6 +286,10 @@ input {
 .address:hover,
 .address:focus {
     color: var(--pressed-state);
+}
+
+.hero {
+    padding: 0 calc((100%)-320px);
 }
 
 .hero-image {
@@ -340,9 +344,25 @@ input {
 }
 
 .cards {
-    display: flex;
-    justify-content: space-between;
-    gap: 24px;
+    padding: 0 66px;   
+}
+
+@media screen and (min-width: 768px) {
+    .cards {
+        max-width: 1157px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 24px;
+        padding: 0 92px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .cards {
+        padding: 0;
+        flex-wrap: nowrap;
+    }
 }
 
 .card-name {
@@ -354,14 +374,33 @@ input {
     background-color: var(--light);
     padding-top: 120px;
     padding-bottom: 120px;
+    flex-shrink: 0;
+}
+
+.team-member-card:not(:last-child) {
+    margin-bottom: 72px;
 }
 
 .team-member-card {
     background-color: var(--white-background);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-
     border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 72px) / 4);
+
+}
+
+@media screen and (min-width: 768px) {
+    .team-member-card {
+        flex-basis: calc((100% - 72px) / 2);
+        margin-bottom: 72px;
+    }
+}
+
+
+@media screen and (min-width: 1158px) {
+    .team-member-card {
+        width: calc((100% - 72px) / 4);
+        margin-bottom: 72px;
+    }
 }
 
 .team-member-header {
@@ -448,7 +487,6 @@ input {
     }
 }
 
-
 /* Header 2 */
 .header-two {
     color: var(--dark);
@@ -506,12 +544,24 @@ input {
 }
 
 .ach-section {
-    padding-bottom: 120px;
+    display: none;
+}
+.achievement {
+    display: none;
 }
 
-.achievement {
-    margin-bottom: 72px;
+@media screen and (min-width: 1158px) {
+    .ach-section {
+        display: flex;
+        min-width: 1158px;
+        padding-bottom: 120px;
+    }
+    
+    .achievement {
+        margin-bottom: 72px;
+    }
 }
+
 
 .ach-link {
     display: block;
@@ -650,22 +700,67 @@ input {
 /* Five Section */
 
 .customers-list {
+    padding: 0 auto;
     display: flex;
-    gap: 24px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 72px;
+    justify-content: center;
 }
 
-.customers-item {
-    width: calc((100% - 120px) / 6);
-    height: 88px;
-    flex-shrink: 0;
-    transition-property: color, border-color;
-    transition-duration: 250ms, 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 468px) {
+    .customers-item {
+        max-width: calc((100% - 16px) / 2);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .customers-item {
+        max-width: calc((100% - 48px) / 3);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .customers-item {
+        width: calc((100% - 120px) / 6);
+        height: 88px;
+        flex-shrink: 0;
+        transition-property: color, border-color;
+        transition-duration: 250ms, 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .customers-list {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .customers-list {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        display: flex;
+        gap: 24px;
+    }
 }
 
 .customers-section {
     background-color: var(--white-background);
-    padding: 120px 0 120px 0;
+    padding: 0 96px
+}
+
+@media screen and (min-width: 1158px) {
+    .customers-section {
+        background-color: var(--white-background);
+        padding: 120px 0 120px 0;
+    }
 }
 
 .customers-link {
