--- a/css/styles.css
+++ b/css/styles.css
@@ -466,6 +466,7 @@ input {
 .header-one {
     color: var(--white-background);
     text-align: center;
+    font-size: 36px;
     justify-content: center;
     margin: 0 auto;
     font-weight: 700;
@@ -479,7 +480,7 @@ input {
     .header-one {
         color: var(--white-background);
         text-align: center;
-        font-size: 36px;
+        font-size: 56px;
         /* font-weight: 700; */
         line-height: 1.07em;
         letter-spacing: 0.02em;
@@ -682,7 +683,19 @@ input {
 
     transition-property: background-color;
     transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+@media screen and (min-width: 768px) {
+    .button-studio-text {
+        margin-top: 36px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .button-studio-text {
+        margin-top: 48px;
+    }
 }
 
 .button-studio-text:hover,
@@ -700,7 +713,6 @@ input {
 /* Five Section */
 
 .customers-list {
-    padding: 0 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -725,7 +737,7 @@ input {
     .customers-item {
         width: calc((100% - 120px) / 6);
         height: 88px;
-        flex-shrink: 0;
+        /* flex-shrink: 0; */
         transition-property: color, border-color;
         transition-duration: 250ms, 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
@@ -742,6 +754,12 @@ input {
     }
 }
 
+@media only screen and (max-width: 1157px) {
+   .customers-list {
+    padding-bottom: 96px;
+   }
+}
+
 @media screen and (min-width: 1158px) {
     .customers-list {
         flex-direction: row;
@@ -753,7 +771,6 @@ input {
 
 .customers-section {
     background-color: var(--white-background);
-    padding: 0 96px
 }
 
 @media screen and (min-width: 1158px) {
@@ -767,7 +784,7 @@ input {
     display: flex;
     width: 168px;
     height: 88px;
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
     justify-content: center;
     align-items: center;
     border-radius: 4px;
@@ -811,11 +828,23 @@ input {
 
 /* Footer */
 
-.ftr-container {
-    display: flex;
-    align-items: baseline;
-    padding: 0 15px;
+@media screen and (max-width: 768px) {
+    .ftr-container {
+        display: flex;
+        flex-direction: column;
+        gap: 72px;
+        justify-content: center;
+    }
 }
+
+@media screen and (min-width: 1158px) {
+    .ftr-container {
+        display: flex;
+        align-items: baseline;
+        padding: 0 15px;
+    }
+}
+
 
 .frt-descr {
     margin-right: 120px;
@@ -911,10 +940,13 @@ input {
     display: inline-block;
 }
 
+
 /* Subscribe */
 
-.form-container {
-    margin-left: 80px;
+@media screen and (min-width: 1158px) {
+    .form-container {
+        margin-left: 80px;
+    }
 }
 
 .subscribe {
