--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ input {
         padding-bottom: 120px;
     }
 }
-
+header-con
 
 /* Layout settings (headings, colors) */
 
@@ -183,7 +183,6 @@ input {
   
 @media screen and (min-width: 768px) {
     .nav-list-item {
-        position: relative;
         display: flex;
         align-items: center;
         gap: 40px;
@@ -206,13 +205,14 @@ input {
     stroke: var(--dark);
 }
 
-@media only screen and (min-width: 1158px) {
-   {
-    .menu-toggle-icon {
-        display: none;
+@media screen and (max-width: 467px) {
+    .menu-toggle {
+        padding: 0;
+        display: flex;
+        justify-content: end;
     }
-  }
 }
+
 
 /* Header */
 
@@ -243,7 +243,7 @@ input {
 
 /* Address */
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .address {
         display: none;
     }
@@ -252,26 +252,33 @@ input {
 
 @media screen and (min-width: 768px) {
 .address {
-    color: var(--text);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.02em; 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        color: var(--text);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0.02em; 
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
-}
-
 
 .address:hover, 
 .address:focus {
     color: var(--pressed-state)
 }
 
-.address-contacts {
-    display: none;
+@media screen and (max-width: 768px) {
+    .address-contacts {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .address-contacts: {
+        display: block;
+    }
 }
 
 @media screen and (min-width: 1158px) {
@@ -856,8 +863,7 @@ input {
  .ftr-descr {
     margin: 0 auto;
     max-width: 268px;
-}
-
+    }
 }
 
 @media screen and (min-width: 1158px) {
@@ -980,6 +986,12 @@ input {
     text-align: center;
     margin: 0 auto;
 } 
+
+@media screen and (max-width: 1157px) {
+    .form-container {
+        margin: 0;
+    }
+}
 
 @media screen and (min-width: 1158px) {
     .form-container {
@@ -1137,16 +1149,41 @@ input {
     padding: 96px 0 120px 0;
 }
 
-.filters-container {
-    padding: 0 0;
-    justify-content: center;
-    margin-bottom: 72px;
+@media screen and (min-width: 468px) {
+    .filters-container {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 263px;
+        justify-content: start;
+        column-gap: 24px;
+        row-gap: 16px;
+        flex-basis: calc((100% - 16px) / 2);
+    }
 }
 
-.filters {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
+@media screen and (min-width: 768px) {
+    .filters-container {
+        margin-right: auto;
+        margin-left: auto;
+        flex-wrap: nowrap;
+        padding: 0 0;
+        justify-content: center;
+        margin-bottom: 72px;
+    }
+    
+    .filters {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .filters-container {
+        margin-right: auto;
+        margin-left: auto;
+        flex-wrap: nowrap;
+    }
 }
 
 /* Button text Portfolio */
@@ -1159,19 +1196,24 @@ input {
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.04em;
-    cursor: pointer;
-
-    display: flex;
-    justify-content: center;
-    padding: 12px 24px;
-    margin: 0 auto;     
+    cursor: pointer;   
     border: 1px solid var(--accent);
     border-radius: 4px;
-
+    padding: 8px 16px;
     transition-property: color, background-color, border-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media screen and (min-width: 1158px) {
+ .button-text {
+        padding: 12px 24px;
+        max-height: 48px;
+        align-items: center;
+    }
+}
+
+
 
 .button-text:hover,
 .button-text:focus {
@@ -1256,8 +1298,19 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card {
-    width: calc((100% - 48px) / 3);
-    position: relative;
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .portfolio-card {
+        width: calc((100% - 24px) / 2);
+    }
+}
+@media screen and (min-width: 1158px) {
+    .portfolio-card {
+        width: calc((100% - 48px) / 3);
+        position: relative;
+    }
 }
 
 .card-container {
@@ -1576,11 +1629,17 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     outline: none;
   }
   
-  @media (min-width: 1155px) {
+  /* @media (min-width: 1155px) {
     .menu-toggle {
         display: none;
     }
-  }
+  } */
+
+  @media screen and (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
   
   .menu-toggle:hover,
   .menu-toggle:focus {
