± basic, need to finish footer, modal, img x1&x2, mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
 
 img {
     display: block;
-    m0-0
+    width: 100%;
 }
 
 .list {
@@ -1311,13 +1311,12 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 @media screen and (min-width: 768px) {
     .portfolio-card {
-        width: calc((100% - 24px) / 2);
+        max-width: calc((100% - 24px) / 2);
     }
 }
 @media screen and (min-width: 1158px) {
     .portfolio-card {
-        width: calc((100% - 48px) / 3);
-        /* position: relative; */
+        max-width: calc((100% - 48px) / 3);
     }
 }
 
