--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,6 @@ input {
 
 .hero-image {
     padding: 112px 0;
-    max-height: 432px;
     background-color: var(--dark);
     background-position: center;
     background-size: cover;
@@ -362,7 +361,7 @@ input {
 
 @media screen and (max-width: 767px) {
     .cards {
-        width: 100%;
+        min-width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -374,6 +373,7 @@ input {
 
 @media screen and (min-width: 768px) {
     .cards {
+        min-width: 584px;
         max-width: 1157px;
         display: flex;
         flex-direction: row;
@@ -548,7 +548,6 @@ input {
     margin-bottom: 72px;
 }
 
-
 @media screen and (min-width: 428px) {
     .header-preferences {
         text-align: center;
@@ -559,6 +558,7 @@ input {
     .preferences {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
     }
     .preferences-item {
         flex-basis: calc((100% - 24px) / 2);
@@ -613,6 +613,7 @@ input {
     
     .achievement {
         margin-bottom: 72px;
+
     }
 }
 
@@ -623,12 +624,25 @@ input {
 }
 
 /* Header 3 */
+
 .header-tree {
     color: var(--dark);
     font-size: 20px;
-    font-weight: 500;
+    /* font-weight: 500; */
     line-height: 1.2em;
     letter-spacing: 0.02em;
+}
+
+@media only screen and (max-width: 467px) {
+     .header-tree {
+         font-weight: 700px;
+      }
+ }
+
+@media screen and (min-width: 468px) {
+    .header-tree {
+        font-weight: 500px;
+     }
 }
 
 .header-preferences {
@@ -765,6 +779,10 @@ input {
 
 /* Five Section */
 
+.customers {
+    padding-bottom: 96px;
+}
+
 .customers-list {
     display: flex;
     flex-direction: row;
@@ -807,11 +825,11 @@ input {
     }
 }
 
-@media only screen and (max-width: 1157px) {
+/* @media only screen and (max-width: 1157px) {
    .customers-list {
     padding-bottom: 96px;
    }
-}
+} */
 
 @media screen and (min-width: 1158px) {
     .customers-list {
@@ -933,6 +951,7 @@ input {
 
 @media screen and (min-width: 468px) and (max-width: 768px){
     .ftr-container {
+        max-width: 584px;
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
@@ -1708,8 +1727,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 /* Mobile Menu */
 
 .menu-toggle {
-    min-height: 40px;
-    min-width: 40px;
+    min-height: 24px;
+    min-width: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1733,12 +1752,18 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   .menu-toggle:focus {
     background-color: rgba(0, 0, 0, 0.1);
   }
+
+  .menu-container {
+    width: 428px;
+    height: 796;
+    padding: 80px 35px 40px 40px;
+  }
   
   .menu-container {
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100vw;
+    right: 0;
+    
     height: 100vh;
     padding: 32px;
     background-color: #3f51b5;
@@ -1746,6 +1771,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+    display: flex;
   }
   
   .menu-container.is-open {
@@ -1763,11 +1789,56 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     padding: 0;
     margin: 0;
     list-style: none;
+    margin-bottom: 284px;
   }
   
   .mobile-menu .link {
-    display: block;
+    display: inline-block;
     padding: 10px;
     color: #fff;
     text-decoration: none;
+    padding: 0;
+  }
+
+  .mobile-menu > li:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .mobile-menu-page {
+    align-content: space-around;
+  }
+
+  .mob-tel {
+    color: var(--primary_brand);
+    margin: 0;
+    margin-bottom: 40px;
+  }
+
+  .mob-link {
+
+  }
+
+  .mob-link {
+    display: inline-block;
+    margin-bottom: 42px;
+  }
+
+  .mob-version-list {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  .mob-media {
+    display: inline-block;
+  }
+ 
+  .mob-pages {
+    color: var(--hero-background);
+  }
+    .mob-icon {
+
+    }
+  
+  .mob-contacts {
+    
   }
