--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,7 @@ input {
 
 @media screen and (min-width: 1158px) {
     .container {
-        /* min-width: 429px; */
-        max-width: 1158px;
+        min-width: 1158px;
         padding-left: 15px;
         padding-right: 15px;
     }    
@@ -218,6 +217,8 @@ input {
     }
   }
 }
+
+
 
 /* Header */
 
@@ -406,7 +407,7 @@ input {
     flex-shrink: 0;
 }
 
-@media screen and (max-width: 468px) {
+@media screen and (max-width: 467px) {
  .team-member-card:not(:last-child) {
     margin-bottom: 72px;
 }
@@ -427,10 +428,11 @@ input {
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1158px){
+@media screen and (min-width: 468px) and (max-width: 1158px){
     .team-member-card {
-        margin-top: 0;
-        margin-bottom: 0;        
+        margin-left: auto;
+        margin-right: a;
+        margin-bottom: 0;   
     }
 
     .cards {
@@ -479,7 +481,6 @@ input {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    /* Поміняла тут на нон */
     border-color: none;
     flex-shrink: 0;
 
@@ -1743,7 +1744,10 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
     align-items: center;
     justify-content: center;
-  
+    border-radius: 50%;
+    background-color: var(--accent);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
     margin: 0;
     padding: 0;
     background-color: transparent;
@@ -1765,7 +1769,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .menu-container {
-    width: 428px;
+    min-width: 320px;
+    max-width: 428px;
     height: 796;
     padding: 80px 35px 40px 40px;
   }
@@ -1774,15 +1779,21 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     position: fixed;
     top: 0;
     right: 0;
-    
-    height: 100vh;
+    max-width: 468px;
+    /* height: 100vh; */
     padding: 32px;
     background-color: var(--white-background);
     z-index: 999;
-  
+    
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
     display: flex;
+    flex-direction: column;
+    
+    
+
+    outline: 2px solid tomato;
+    outline-offset: -2px;
   }
   
   .menu-container.is-open {
@@ -1795,7 +1806,33 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     right: 16px;
     color: #fff;
   }
+
+  .js-close-menu {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: var(--accent);
+    border: none;
+    padding: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
   
+
+    .js-close-menu:hover,
+    .js-close-menu:focus {
+    background-color: var(--pressed-state);
+    fill: #ffffff;
+    border: none;
+    }
+
   .mobile-menu {
     padding: 0;
     margin: 0;
@@ -1824,11 +1861,12 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     color: var(--primary_brand);
     margin: 0;
     margin-bottom: 40px;
+    max-width: 468px;
   }
 
   .mob-link {
-
-  }
+        
+    }
 
   .mob-link {
     display: inline-block;
@@ -1855,7 +1893,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 
     .mob-icon {
-
+       
     }
   
   .mob-contacts {
