--- a/css/styles.css
+++ b/css/styles.css
@@ -358,6 +358,7 @@ input {
    display: flex;
    flex-direction: column;
    gap: 24px;
+   margin: 0 auto;
 }
 
 @media screen and (max-width: 767px) {
@@ -428,11 +429,10 @@ input {
 }
 
 
-@media screen and (min-width: 468px) and (max-width: 1158px){
+@media screen and (min-width: 768px) and (max-width: 1158px){
     .team-member-card {
-        margin-left: auto;
-        margin-right: a;
-        margin-bottom: 0;   
+        margin-top: 0;
+        margin-bottom: 0;  
     }
 
     .cards {
@@ -1476,11 +1476,21 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
+
+.modal {
+    max-width: 392px;
+}
+
+@media screen and (min-width: 768px) {
+    .modal {
+        max-width: 408px;
+    }
+}
+
 .modal {
     display: block;
     padding: 72px 24px 24px 24px;
     position: absolute;
-    width: 408px;
     flex-shrink: 0;
     border-radius: 4px;
     background-color: var(--modal-background);
@@ -1495,6 +1505,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .modal-btn {
     position: absolute;
