--- a/css/styles.css
+++ b/css/styles.css
@@ -1302,7 +1302,7 @@ input {
 
 .filters-container {
     padding: 0 0;
-    justify-content: center;
+    justify-content: flex-start;
     margin-bottom: 72px;
 }
 
