--- a/css/styles.css
+++ b/css/styles.css
@@ -357,8 +357,15 @@ input {
 .cards {
    display: flex;
    flex-direction: column;
-   gap: 72px;
+   /* gap: 24px; */
    margin: 0 auto;
+}
+
+@media screen and (min-width: 468px) {
+    .cards {
+        gap: 72px;
+    }
+    
 }
 
 @media screen and (max-width: 767px) {
@@ -1275,7 +1282,7 @@ input {
     .filters {
         display: flex;
         flex-wrap: wrap;
-        /* justify-content: start; */
+        justify-content: start;
         max-width: 320px;
         gap: 24px;
         row-gap: 16px;
@@ -1792,6 +1799,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     position: fixed;
     top: 0;
     right: 0;
+    width: 100%;
     max-width: 468px;
     /* height: 100vh; */
     padding: 32px;
