--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ input {
     background-position: center;
     background-size: cover;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
-    url(../images/people_office_1.jpg);
+    url(../images/people-office_1@2.jpg);
     background-repeat: no-repeat;
     }
 
