--- a/css/styles.css
+++ b/css/styles.css
@@ -323,8 +323,8 @@ input {
 
 @media screen and (min-width: 1158px) {
     .hero-image {
-        min-width: 1158px;
-        /* max-width: 1158px; */
+        /* min-width: 1158px; */
+        max-width: 1158px;
         /* padding-top: 188px; */
         padding-bottom: 188px;
         margin: 0 auto;
@@ -1491,7 +1491,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
 .modal {
-    max-width: 392px;
+    width: 392px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1501,6 +1501,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
+    max-width: 100%;
     display: block;
     padding: 72px 24px 24px 24px;
     position: absolute;
@@ -1551,6 +1552,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 .modal-caption {
     display: block;
     width: 360px;
+    max-width: 100%;
 
     color: var(--dark);
     font-size: 16px;
@@ -1727,6 +1729,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 .user-comment {
     width: 360px;
+    max-width: 100%;
     height: 120px;
     flex-shrink: 0;
     border-radius: 4px;
