--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,27 @@ input {
     padding: 0 calc((100%)-320px);
 }
 
+/* Базові стилі і 1x зображення */
 .hero-image {
+    width: 320px;
+    height: 432px;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people_office_1.jpg');
+    background-size: cover;
+}
+
+/* Перевизначаємо шлях до зображення
+   якщо щільність екрана як мінімум 2x */
+   @media (min-resolution: 192dpi) {
+    .hero-image {
+      background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people-office_1@2.jpg');
+      width: 100%;
+    height: 100%;
+    }
+  }
+
+.hero-image {
+    width: 100%;
+    height: 100%;
     padding: 112px 0;
     background-color: var(--dark);
     background-position: center;
@@ -322,6 +342,7 @@ input {
 
 @media screen and (min-width: 1158px) {
     .hero-image {
+        max-width: 1440px;
         /* max-width: 1440px;
         /* padding-top: 188px; */
         padding-bottom: 188px;
@@ -552,9 +573,14 @@ input {
 
 .preferences-icons {
     display: none;
-}
+} 
+
 .preferences-item:not(:last-child) {
     margin-bottom: 72px;
+}
+
+.header-preferences {
+    text-align: left;
 }
 
 @media screen and (min-width: 428px) {
@@ -656,16 +682,22 @@ input {
 
 .header-preferences {
     margin-bottom: 8px;
+    text-align: center;
 }
 
 .header-preferences {
     font-size: 36px;
 }
 
+@media only screen and (min-width: 768px) {
+    .header-preferences {
+        text-align: left;
+  }
+}
+
 @media screen and (min-width: 1158px) {
     .header-preferences {
         font-size: 20px;
-        text-align: left;
     }
 }
 
@@ -807,6 +839,10 @@ input {
     justify-content: center;
 }
 
+.customers-item {
+        max-width: calc((100% - 16px) / 2);
+    }
+
 @media screen and (min-width: 468px) {
     .customers-item {
         max-width: calc((100% - 16px) / 2);
@@ -872,6 +908,10 @@ input {
 }
 
 .customers-link {
+    width: calc(100% - 16px);
+}
+
+.customers-link {
     display: flex;
     width: 168px;
     height: 88px;
@@ -885,6 +925,12 @@ input {
     transition-property: border-color, color;
     transition-duration: 250ms, 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1), cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+    .customers-link {
+        width: 168px;
+    }
 }
 
 .customers-link:hover,
@@ -987,7 +1033,7 @@ input {
     }  
 }
 
-@media screen and (min-width: 467px) {
+@media screen and (min-width: 320px) {
     .ftr-container {
         display: flex;
         flex-wrap: wrap;
@@ -1812,7 +1858,8 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     top: 0;
     right: 0;
     width: 100%;
-    max-width: 468px;
+    height: 100%;
+    /* max-width: 468px; */
     /* height: 100vh; */
     padding: 32px;
     background-color: var(--white-background);
@@ -1829,6 +1876,12 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     outline-offset: -2px;
   }
   
+  @media screen and (min-width: 468px) {
+    .menu-container {
+        max-width: 468px;
+    }
+  }
+
   .menu-container.is-open {
     transform: translateX(0);
   }
@@ -1895,6 +1948,14 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     margin: 0;
     margin-bottom: 40px;
     max-width: 468px;
+    font-weight: 700;
+    text-align: left;
+  }
+
+  @media only screen and (max-width: 320px) {
+    .mob-tel {
+        font-size: 27px;
+    }
   }
 
   .mob-link {
@@ -1918,5 +1979,9 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   .mob-pages:hover, 
   .mob-pages:focus {
+    color: var(--primary_brand);
+  }
+  
+  .active-page {
     color: var(--primary_brand);
   }
