--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,44 @@ input {
     }
 }
 
+/* EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE */
+.address-contacts {
+    display: none;
+}
+
+.address {
+    display: none;
+    color: var(--text);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .address {
+        display: inline-block;
+        font-size: 12px;
+    }
+
+    .address-contacts {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .address-contacts {
+        display: flex;
+        gap: 40px;
+    }
+}
+/* EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE */
+
+.nav-link {
+    display: none;
+}
+
+.nav-list-item {
+    display: none;
+}
 
 .nav-page {
     background: var(--white-background);
@@ -173,12 +211,6 @@ input {
 
 .nav-list-item {
     max-height: 72px;
-}
-
-@media only screen and (max-width: 767px) {
-    .nav-list-item {
-        display: none;
-    }
 }
   
 @media screen and (min-width: 768px) {
@@ -247,13 +279,6 @@ input {
 
 /* Address */
 
-@media only screen and (max-width: 767px) {
-    .address {
-        display: none;
-    }
-}
-
-
 @media screen and (min-width: 768px) {
 .address {
     color: var(--text);
@@ -274,25 +299,6 @@ input {
     color: var(--pressed-state)
 }
 
-.address-contacts {
-    display: block;
-}
-
-@media screen and (min-width: 768px) {
-    .address-contacts: {
-        display: flex;
-    }
-}
-
-@media screen and (min-width: 1158px) {
-    .address-contacts {
-    align-items: center;
-    display: flex;
-    gap: 40px;
-    }
-}
-
-
 .address:hover,
 .address:focus {
     color: var(--pressed-state);
@@ -304,24 +310,24 @@ input {
 
 /* Базові стилі і 1x зображення */
 .hero-image {
-    width: 320px;
+    /* width: 320px;
     height: 432px;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people_office_1.jpg');
-    background-size: cover;
+    background-size: cover; */
 }
 
 /* Перевизначаємо шлях до зображення
    якщо щільність екрана як мінімум 2x */
-   @media (min-resolution: 192dpi) {
+   /* @media (min-resolution: 192dpi) {
     .hero-image {
       background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url('../images/people-office_1@2.jpg');
       width: 100%;
     height: 100%;
     }
-  }
+  } */
 
 .hero-image {
-    width: 100%;
+    /* width: 100%;
     height: 100%;
     padding: 112px 0;
     background-color: var(--dark);
@@ -331,25 +337,25 @@ input {
     url(../images/people_office_1.jpg),
     url(../images/people-office_1@2.jpg);
     background-repeat: no-repeat;
-    }
+    } */
     
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
     .hero-image {
-        /* max-height: 436px;
-        min-width: 768px; */
+        max-height: 436px;
+        min-width: 768px;
     }
-}
+} */
 
-@media screen and (min-width: 1158px) {
+/* @media screen and (min-width: 1158px) {
     .hero-image {
         max-width: 1440px;
         /* max-width: 1440px;
         /* padding-top: 188px; */
-        padding-bottom: 188px;
+        /* padding-bottom: 188px;
         padding-top: 188px;
-        margin: 0 auto;
+        margin: 0 auto; */
     }
-}
+} 
 
 .hero-image {
     /* padding-top: 188px;
@@ -363,6 +369,67 @@ input {
     margin: 0 auto;
     min-width: 1440px;
     max-width: 1440px; */
+}
+
+.hero-image {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: var(--dark);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+    url(../images/people_mob@1x.jpg);
+}
+
+@media only screen and (max-width: 428px) (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people_mob@2x.jpg);
+  }
+}
+
+@media only screen and (max-width: 428px) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people_tablet@1x.jpg);
+  }
+}
+
+@media only screen and (max-width: 429px) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people_tablet@2x.jpg);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people_tablet@1x.jpg);
+  }
+}
+
+@media only screen and (min-width: 768px) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people_tablet@2x.jpg);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people_office_1.jpg);
+  }
+}
+
+@media only screen and (min-width: 1158px) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    .hero-image {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), 
+        url(../images/people-office_1@2.jpg);
+  }
 }
 
 /* Team */
