--- a/css/styles.css
+++ b/css/styles.css
@@ -670,7 +670,7 @@ input {
     .preferences {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        column-gap: 24px;
     } 
 
     .preferences-item {
